--- a/k8s/rabbit-app.yaml
+++ b/k8s/rabbit-app.yaml
@@ -33,7 +33,7 @@ spec:
     spec:
       containers:
       - name: rabbit-app
-        image: rabbitmq
+        image: rabbitmq:3.13.1-management
         ports:
         - containerPort: 5672
         - containerPort: 15672
