--- a/k8s/auth-app.yaml
+++ b/k8s/auth-app.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: auth-app
-        image: gpinto/auth-service:1.0.0
+        image: tavopragma/auth-service:1.0.0
         ports:
         - containerPort: 8080
         envFrom:
