--- a/k8s/ticket-app.yaml
+++ b/k8s/ticket-app.yaml
@@ -29,6 +29,7 @@ spec:
       containers:
       - name: ticket-app
         image: tavopragma/ticket-service:1.0.0
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
         envFrom:
