--- a/k8s/tournament-app.yaml
+++ b/k8s/tournament-app.yaml
@@ -29,6 +29,7 @@ spec:
       containers:
       - name: tournament-app
         image: tavopragma/tournament-service:1.0.0
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
         envFrom:
