--- a/swagger/authentication.yaml
+++ b/swagger/authentication.yaml
@@ -62,6 +62,12 @@ paths:
       responses:
         '201':
           description: Successful operation
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/400Error'
         '500':
           description: Server error
           content:
@@ -148,6 +154,20 @@ components:
         age:
           type: number
           example: 25
+    400Error:
+      type: object
+      properties:
+        status:
+          type: string
+          example: 400
+        errors:
+          type: array
+          items:
+            type: object
+            properties:
+              message:
+                type: string
+                example: User already exists
     404Error:
       type: object
       properties:
