--- a/swagger/middleware.yaml
+++ b/swagger/middleware.yaml
@@ -62,6 +62,12 @@ paths:
       responses:
         '201':
           description: Successful operation
+        '400':
+          description: Bad Rquest
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/400Error'  
         '500':
           description: Server error
           content:
@@ -113,6 +119,20 @@ components:
         Age:
           type: number
           example: 25
+    400Error:
+      type: object
+      properties:
+        Status:
+          type: string
+          example: 400
+        Errors:
+          type: array
+          items:
+            type: object
+            properties:
+              Message:
+                type: string
+                example: User already exists
     404Error:
       type: object
       properties:
