--- a/k8s/rabbit-app.yaml
+++ b/k8s/rabbit-app.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     app: rabbit-app
-  type: NodePort
+  type: LoadBalancer
   ports:
     - name: app
       protocol: TCP
