--- a/k8s/zipkin-app.yaml
+++ b/k8s/zipkin-app.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     app: zipkin-app
-  type: NodePort
+  type: LoadBalancer
   ports:
     - protocol: TCP
       port: 9411
